# media-bucket

./: .dockerignore  .gitignore  Dockerfile  README.md
media-bucket/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
media-bucket/cli/: Cargo.toml
media-bucket/cli/src/: main.rs  repl.rs
media-bucket/libmb/: Cargo.toml
media-bucket/libmb/db/migrations/: 00_initial_create.sql  01_pdf_metadata.sql  02_move_uploads_to_post_items.sql  03_expand_video.sql  04_add_video_encoding.sql  05_tag_vtab.sql  06_post_vtab.sql  07_post_vtab_with_tags.sql  08_post_vtab_with_tags_fix.sql  09_tag_group_vtab.sql  10_fix_tag_update.sql  11_add_tag_implications.sql  12_add_vtab_indexes.sql  13_clean_up_migration.sql  14_add_indexes.sql  15_add_file_size_index.sql  16_add_tags_posts_key_index.sql  17_add_post_items_key_index.sql
media-bucket/libmb/src/: bucket.rs  data_source.rs  http_client.rs  http_models.rs  http_server.rs  lib.rs  local.rs  media_import.rs  model.rs
media-bucket/libmb/src/http_server/: config_file.rs  instance.rs  middleware.rs  routes.rs  stream_file.rs  stream_playlist.rs  token.rs  web_error.rs
media-bucket/libmb/src/http_server/middleware/: page_params.rs  search_query.rs  session.rs
media-bucket/libmb/src/http_server/routes/: buckets.rs  content.rs  groups.rs  media.rs  posts.rs  tags.rs
media-bucket/libmb/src/http_server/stream_playlist/: api_urls.rs  media_playlist_stream.rs  playlist_stream.rs
media-bucket/libmb/src/local/: encrypted_fs_storage.rs  secret.rs  sqlite.rs
media-bucket/libmb/src/media_import/: digest.rs  file_data.rs  imagemagick.rs
webclient/: .dockerignore  Dockerfile  README.md  angular.json  package-lock.json  package.json  tsconfig.json
webclient/src/: index.html  robots.txt  styles.scss
webclient/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
webclient/src/app/core/: core.module.ts
webclient/src/app/core/models/: auth.ts  bucket.ts  chart.ts  chartsQuery.ts  failure.ts  index.ts  listing.ts  loadingState.ts  media.ts  page.ts  post.ts  postItem.ts  searchQuery.ts  tag.ts  upload.ts
webclient/src/app/core/services/: index.ts
webclient/src/app/core/services/api/: api.service.ts
webclient/src/app/core/services/app-title/: app-title.service.spec.ts  app-title.service.ts
webclient/src/app/core/services/auth-cache/: auth-cache.service.spec.ts  auth-cache.service.ts
webclient/src/app/core/services/confirm/: confirm.guard.spec.ts  confirm.guard.ts
webclient/src/app/core/services/relogin/: relogin.interceptor.spec.ts  relogin.interceptor.ts
webclient/src/app/core/store/auth/: auth.actions.ts  auth.effects.ts  auth.module.ts  auth.reducer.ts  index.ts
webclient/src/app/features/bucket/: bucket.module.ts
webclient/src/app/features/bucket/components/header/: header.component.html  header.component.ts
webclient/src/app/features/bucket/components/not-authenticated/: not-authenticated.component.html  not-authenticated.component.spec.ts  not-authenticated.component.ts
webclient/src/app/features/bucket/containers/bucket-details-dialog/: bucket-details-dialog.component.html  bucket-details-dialog.component.scss  bucket-details-dialog.component.spec.ts  bucket-details-dialog.component.ts
webclient/src/app/features/bucket/containers/relogin-modal/: relogin-modal.component.html  relogin-modal.component.scss  relogin-modal.component.spec.ts  relogin-modal.component.ts
webclient/src/app/features/bucket/pages/bucket-page/: bucket-page.component.html  bucket-page.component.scss  bucket-page.component.spec.ts  bucket-page.component.ts
webclient/src/app/features/bucket/store/: bucket.actions.ts  bucket.effects.ts  bucket.module.ts  bucket.reducer.ts  bucket.selectors.ts  index.ts
webclient/src/app/features/login/: login.module.ts
webclient/src/app/features/login/components/bucket-select/: bucket-select.component.html  bucket-select.component.scss  bucket-select.component.spec.ts  bucket-select.component.ts
webclient/src/app/features/login/components/login/: login.component.html  login.component.scss  login.component.spec.ts  login.component.ts
webclient/src/app/features/login/components/login-form/: login-form.component.html  login-form.component.ts
webclient/src/app/features/login/components/login-layout/: login-layout.component.html  login-layout.component.scss  login-layout.component.spec.ts  login-layout.component.ts
webclient/src/app/features/login/components/login-tile/: login-tile.component.html  login-tile.component.spec.ts  login-tile.component.ts
webclient/src/app/features/login/pages/login-page/: login-page.component.html  login-page.component.ts
webclient/src/app/features/login/store/: index.ts  login.actions.ts  login.effects.ts  login.module.ts  login.reducer.ts  login.selectors.ts
webclient/src/app/features/search/: search.module.ts
webclient/src/app/features/search/components/action-ribbon/: action-ribbon.component.html  action-ribbon.component.scss  action-ribbon.component.spec.ts  action-ribbon.component.ts
webclient/src/app/features/search/components/confirm-delete-post-dialog/: confirm-delete-post-dialog.component.html  confirm-delete-post-dialog.component.spec.ts  confirm-delete-post-dialog.component.ts
webclient/src/app/features/search/components/create-post-form/: create-post-form.component.html  create-post-form.component.spec.ts  (+1 more)
webclient/src/app/features/search/store/: index.ts  search.actions.ts  search.effects.ts  search.module.ts  search.reducer.ts  search.selectors.ts
webclient/src/app/features/stats/: stats.module.ts
webclient/src/app/features/stats/store/: index.ts  stats.actions.ts  stats.effects.ts  stats.module.ts  stats.reducer.ts  stats.selectors.ts
webclient/src/app/shared/loading/: loading.module.ts
webclient/src/app/shared/login-form/: login-form.module.ts
webclient/src/app/shared/pipes/: ago.pipe.spec.ts  ago.pipe.ts  bytes.pipe.ts  duration.pipe.ts  pipes.module.ts
webclient/src/app/shared/search-bar/: search-bar.module.ts
webclient/src/environments/: environment.prod.ts  environment.ts
(+113 files in other folders)
