[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mb"
path = "src/main.rs"

[dependencies]
libmb = { path = "../libmb", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }

clap = { version = "4.0.32", features = ["unicode", "derive"] }
rpassword = "7.2.0"