[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mb"
path = "src/main.rs"

[dependencies]
libmb = { path = "../libmb", features = ["full"] }
tokio = { version = "1.35.1", features = ["full"] }

clap = { version = "4.4.18", features = ["unicode", "derive"] }
rpassword = "7.3.1"