[package]
name = "libmb"
version = "0.1.0"
edition = "2021"

[features]
http-client = [
    "reqwest",
    "serde_json",
	"tokio-util"
]

http-server = [
    "actix-web",
    "env_logger",
    "actix-files",
    "actix-cors",
    "toml",
    "log",
    "futures-core",
    "pin-project-lite",
    "http-range",
    "jsonwebtoken",
    "cookie"
]

http-server-spec = [
    "http-server",
    "utoipa",
    "utoipa-swagger-ui"
]

local = [
    "libsqlite3-sys",
    "sqlx",
    "md5",
    "sha-1",
    "sha2",
    "rand",
    "futures",
]
encryption = [
    "local",
    "libsqlite3-sys/bundled-sqlcipher",
    "chacha20",
    "chacha20poly1305",
    "serde_json",
    "hex",
    "pin-utils",
]

default = [
    "local",
    "encryption",
    "http-server",
    "http-client",
]

[dependencies]
thiserror = "1.0.56"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
mediatype = { version = "0.19.17", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
chrono = { version = "0.4.33", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"

serde_json = { version = "1.0.112", optional = true }

# Local
libsqlite3-sys = { version = "0.27.0", features = ["bundled"], optional = true }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "sqlite", "chrono", "migrate"], optional = true }
hex = { version = "0.4.3", optional = true }
pin-utils = { version = "0.1.0", optional = true  }
futures = { version = "0.3.30", optional = true }

md5 = { version = "0.7.0", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha-1 = { version = "0.10.1", optional = true }

chacha20 = { version = "0.9.1", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }

rand = { version = "0.8.5", optional = true }

# Server
actix-web = { version = "4.4.1", optional = true, features = ["cookies"] }
cookie = { version = "0.18.0", optional = true }
actix-cors = { version = "0.7.0", optional = true }
actix-files = { version = "0.6.5", optional = true }
toml = { version = "0.8.8", features = ["preserve_order"], optional = true }
env_logger = { version = "0.11.1", optional = true }
log = { version = "0.4.20", optional = true }
futures-core = { version = "0.3.30", optional = true }
pin-project-lite =  { version ="0.2.13", optional = true }
http-range =  { version ="0.1.5", optional = true }
jsonwebtoken = { version = "9.2.0", optional = true }

reqwest = { version = "0.11.23", features = ["json", "serde_json", "stream"], optional = true }
tokio-util = { version = "0.7.10", optional = true}
utoipa = { version = "4.2.0", optional = true, features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", optional = true, features = ["actix-web", "debug-embed"] }
